--- a/web/cobrands/zurich/base.scss
+++ b/web/cobrands/zurich/base.scss
@@ -254,4 +254,37 @@ h4.static-with-rule {
     #site-logo {
         top: 0;
     }
+
+    .mappage.admin {
+      .container {
+        padding: 0;
+      }
+
+      .content {
+        overflow: auto;
+        background: #fff url(/cobrands/zurich/admin-faux-columns.gif) top center repeat-y;
+        font-size: 0.8em;
+        min-height: 0 !important; // override hard-coded inline min-height style
+      }
+
+      #map_box {
+        display: none; // I am out of ideas for this element, so let's hide it for now
+      }
+    }
+
+    .admin-report-edit {
+      margin-top: 1em;
+      float: left;
+      width: 47%;
+
+      input[type=text],
+      textarea {
+        border: none;
+        padding: 0;
+      }
+    }
+
+    .admin-report-edit--details {
+      float: right;
+    }
 }
