--- a/web/cobrands/sass/_base.scss
+++ b/web/cobrands/sass/_base.scss
@@ -1621,6 +1621,12 @@ table.nicetable {
   }
 }
 
+@media screen {
+  .print-only {
+    display: none !important;
+  }
+}
+
 @media print {
   @page {
     margin: 3em;
@@ -1633,7 +1639,7 @@ table.nicetable {
   .olControlPanZoom,
   #sub_map_links,
   #fms_pan_zoom,
-  .report-edit-action,
+  .screen-only,
   .olMapViewport {
     display: none !important;
   }
