--- a/web/cobrands/zurich/base.scss
+++ b/web/cobrands/zurich/base.scss
@@ -247,6 +247,12 @@ h4.static-with-rule {
     border-radius: 0;
 }
 
+@media screen {
+    dd.screen-no-space-after {
+      margin-bottom: 0;
+    }
+}
+
 @media print {
     #site-header .container {
         position: relative;
@@ -262,8 +268,8 @@ h4.static-with-rule {
 
       .content {
         overflow: auto;
-        background: #fff url(/cobrands/zurich/admin-faux-columns.gif) top center repeat-y;
         font-size: 0.8em;
+        background: transparent url(/cobrands/zurich/admin-print-columns.gif) top center repeat-y;
         min-height: 0 !important; // override hard-coded inline min-height style
       }
 
@@ -273,18 +279,37 @@ h4.static-with-rule {
     }
 
     .admin-report-edit {
-      margin-top: 1em;
-      float: left;
-      width: 47%;
+        margin-top: 1em;
+        width: 47%;
 
-      input[type=text],
-      textarea {
-        border: none;
-        padding: 0;
-      }
+        input[type=text],
+        textarea {
+            border: none;
+            padding: 0;
+        }
+
+        dd {
+            padding-left: 1em;
+        }
+
+        h2 {
+            font-family: inherit;
+            font-size: inherit;
+            font-weight: bold;
+        }
     }
 
     .admin-report-edit--details {
-      float: right;
+        float: left;
+        border-right: 1px solid #ddd;
+        padding-right: 3%;
+    }
+
+    .admin-report-edit--interact {
+        float: right;
+    }
+
+    dd.print-no-space-after {
+        margin-bottom: 0;
     }
 }
