[Zurich] Add mini map to Zurich admin report print view 677
Uses jQuery to clone a copy of the "noscript" map elsewhere into
the DOM, because the original is too far from where we need it.

Uses CSS transforms to make the map smaller, so it won't look
right in IE8 or lower :-(

--- a/templates/web/zurich/admin/report_edit.html
+++ b/templates/web/zurich/admin/report_edit.html
@@ -127,6 +127,12 @@
 
 [% status_message %]
 
+<script type="text/javascript">
+    $(function(){
+        $('#map_box .noscript').clone().removeClass('noscript').addClass('map_clone print-only').prependTo('.admin-report-edit--interact');
+    });
+</script>
+
 <dl>
 
     <dt class="screen-only">
