[Zurich] Styling for "Updated!" message 690
The message shown on form submission no longer pushes both columns
down, and disappears after 5 seconds.

--- a/templates/web/zurich/admin/report_edit-sdm.html
+++ b/templates/web/zurich/admin/report_edit-sdm.html
@@ -9,8 +9,6 @@
 [% map_html %]
 </div>
 
-[% status_message %]
-
 <form method="post" action="[% c.uri_for( 'report_edit', problem.id ) %]" enctype="application/x-www-form-urlencoded" accept-charset="utf-8">
     <input type="hidden" name="token" value="[% token %]" >
     <input type="hidden" name="submit" value="1" >
@@ -79,6 +77,8 @@
 
 <div class="admin-report-edit admin-report-edit--interact">
 
+[% status_message %]
+
 <p align="right"><input type="submit" name="send_back" value="[% loc('Not for my subdivision') %]"></p>
 <p align="right"><input type="submit" name="not_contactable" value="[% loc('Customer not contactable') %]"></p>
 
@@ -100,6 +100,11 @@
                 if (ui.value < 0) { return false }
             }
         });
+        setTimeout(function(){
+          $('.message-updated').slideUp(250, function(){
+            $(this).remove();
+          });
+        }, 5000);
     });
 </script>
 </p>
