[Zurich] Make "time spent" labels inline to save space 690

--- a/templates/web/zurich/admin/report_edit-sdm.html
+++ b/templates/web/zurich/admin/report_edit-sdm.html
@@ -61,7 +61,7 @@
 </li>
 
 <li>
-    <label>[% loc('Time spent (in minutes):') %]</label> [% problem.get_time_spent %]
+    <label class="admin-label--inline">[% loc('Time spent (in minutes):') %]</label> [% problem.get_time_spent %]
 </li>
 
 [% IF problem.photo %]
@@ -91,7 +91,7 @@
 </ul>
 
 <p class="report-edit-action">
-<label for="time_spent">[% loc('Time spent (in minutes):') %]</label>
+<label class="admin-label--inline" for="time_spent">[% loc('Time spent (in minutes):') %]</label>
 <input type="text" name="time_spent" id="form_time_spent" style="width: 4em" value="0">
 <script>
     $(function () {
