--- a/templates/web/zurich/admin/report_edit.html
+++ b/templates/web/zurich/admin/report_edit.html
@@ -88,7 +88,7 @@
 </li>
 
 <li>
-    <label>[% loc('Time spent (in minutes):') %]</label> [% problem.get_time_spent %]
+    <label class="admin-label--inline">[% loc('Time spent (in minutes):') %]</label> [% problem.get_time_spent %]
 </li>
 
 [% IF problem.photo %]
@@ -120,7 +120,7 @@
 </p>
 
 <p class="report-edit-action">
-<label for="time_spent">[% loc('Time spent (in minutes):') %]</label>
+<label class="admin-label--inline" for="time_spent">[% loc('Time spent (in minutes):') %]</label>
 <input type="text" name="time_spent" id="form_time_spent" style="width: 4em" value="0">
 <script>
     $(function () {
@@ -138,7 +138,7 @@
 </script>
 </p>
 
-<p> 
+<p>
     <span class="mock-label">[% loc('State:') %]</span>
     <select name="state"  id="state">
         <option value="">--</option>
