--- a/templates/web/zurich/admin/report_edit.html
+++ b/templates/web/zurich/admin/report_edit.html
@@ -284,7 +284,7 @@
             [% loc('Message to competent body:') %]
           [% END %]
     </h2>
-    <div class="admin-official-answer">
+    <div class="admin-external-message">
         [% problem.extra.external_message | html_para %]
     </div>
 [% END %]
