--- a/web/cobrands/bromley/layout.scss
+++ b/web/cobrands/bromley/layout.scss
@@ -100,6 +100,11 @@ body.frontpage #user-meta p {
   margin-top:3em
 }
 
+// The page h1 needs to be white on desktop, because it's in a blue box
+h1.main {
+  color: #fff;
+}
+
 // Because we've changed the page background, the footer looks a bit rubbish
 footer,
 body.twothirdswidthpage .container .content footer .tablewrapper,
